@@ -1,41 +1,14 @@
+#include "fmt.h"
 #include "obuf.h"
-
-static int obuf_putsnumw_rec(obuf* out, long data, int sign,
-			     unsigned width, char pad,
-			     unsigned base, const char* digits)
-{
-  if (width) --width;
-  if (data >= (long)base) {
-    if (!obuf_putsnumw_rec(out, data/base, sign, width, pad, base, digits))
-      return 0;
-  }
-  else {
-    if (!obuf_sign_pad(out, sign, width, pad)) return 0;
-  }
-  return obuf_putc(out, (data % base) + '0');
-}
 
 /** Write a signed integer to the \c obuf with optional padding. */
 int obuf_putsnumw(obuf* out, long data, unsigned width, char pad,
 		  unsigned base, const char* digits)
 {
-  int sign;
-
-  sign = 0;
-  if (data < 0) {
-    sign = 1;
-    data = -data;
-    if (width) -- width;
-  }
-  if (data < (long)base) {
-    if (width) {
-      if (!obuf_sign_pad(out, sign, width-1, pad)) return 0;
-    }
-    else if (sign)
-      if (!obuf_putc(out, '-')) return 0;
-    return obuf_putc(out, data + '0');
-  }
-  return obuf_putsnumw_rec(out, data, sign, width, pad, base, digits);
+  unsigned len = fmt_snumw(0, data, width, pad, base, digits);
+  char buf[len];
+  fmt_snumw(buf, data, width, pad, base, digits);
+  return obuf_write(out, buf, len);
 }
 
 /** Write a signed integer as decimal to the \c obuf with padding. */
